--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -289,6 +289,7 @@ h3 { padding-top: 20px; }
 	<td>desc</td></tr>
 </table>
 </div>
+</div>
 
 <div class="col-md-5 col-sm-5">
 <div class="panel panel-default">
