--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -198,6 +198,7 @@ h3 { padding-top: 20px; }
 	<td>desc</td></tr>
 </table>
 </div>
+</div>
 
 <div class="col-md-6 col-sm-6">
 <div class="panel panel-default">
@@ -433,7 +434,6 @@ h3 { padding-top: 20px; }
 
 
 <div class="col-md-6 col-sm-6">
-<div class="panel panel-default">
 
 <div class="panel panel-default">
   <div class="panel-heading"><strong>Access permissions</strong></div>
@@ -459,6 +459,7 @@ h3 { padding-top: 20px; }
 
 <br>
 
+<div class="panel panel-default">
 <div class="panel-heading"><strong>Moderate permissions</strong></div>
 <table class="table table-striped">
 	<tr>
