--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -326,7 +326,8 @@ h3 { padding-top: 20px; }
 
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Advanced</strong></div>
-	<p>The options listed under this heading are controlled by the group owner and are not editable by the group's manager.</p>
+<div class="panel-body">
+	<p>The options listed under this heading are controlled by the group owner and are not editable by the group's manager.</p></div>
 </div>
 </div>
 </div>
