commit ipt change on master

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -159,7 +159,7 @@ h3 { padding-top: 20px; }
 
 	<tr>
 	<td>Add a new category</td>
-	<td><abbr title="Internet Message Access Protocol">IMAP</abbr>: enabled/disabled</td></tr>
+	<td>desc</tr>
 </table>
 </div>
 </div>
@@ -327,7 +327,7 @@ h3 { padding-top: 20px; }
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Advanced</strong></div>
 <div class="panel-body">
-	<p>The options listed under this heading are controlled by the group owner and are not editable by the group's manager.</p></div>
+	<p>The options listed under this heading are controlled by the group owner and are <mark>not editable by the group's manager</mark>.</p></div>
 </div>
 </div>
 </div>
