--- a/scripts/IPT-draft.html
+++ b/scripts/IPT-draft.html
@@ -84,11 +84,11 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Verify that the user has attempted to reset his or her password already using the button marked "Forgot your username or password?</li>.</li>
+    <li>Verify that the user has attempted to reset his or her password already using the button marked "Forgot your username or password?</li>
     <li>If no, direct user to <a href="https://www.alceasoftware.com/web/login.php">IPT login</a>. Instruct user to perform self-service password reset.
     <p>The user will need to provide an Organization ID (msass), User Type (student) and associated email address. After the user clicks <strong>Submit</strong>, the system will display the following confirmation: <code>A reset password link has been emailed to you at abc12@case.edu. The link will be valid for the next two hours.</code></p>
     <p><mark>Important</mark> For security reasons you should NOT provide users with any credential information over the phone that they have not confirmed first, including email addresses.</p></li>
-    <p>Resolve the ticket, or, if unsuccessful, complete the following to reset the default password for the user.</p>  
+    <li>Resolve the ticket, or, if unsuccessful, complete the following to reset the default password for the user.</li>  
     <li>Sign in to <a href="https://www.alceasoftware.com/web/login.php">IPT</a> using either set of Administrator credentials:<br>
       <ul>
           <li>
