more polish on the canvas

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -44,7 +44,7 @@ UGEN, Canvas, LMS</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">I Forgot My Password</a><br>
-  <a href="#slow">Slow Response Time</a><br>
+  <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
   <a href="#not-listed">Not Listed in a class</a></p>
 
 <h3 href="#how-to">How-to + Training</h2>
@@ -84,22 +84,33 @@ UGEN, Canvas, LMS</p>
 
 <h3 id="lost-password">I Forgot My Password</h3>
   <p>back to <a href="#">top</a> </p>
-  <ol>
-    <li>Credentials (Service Desk Resolver)</li>
-    <li>Send to Network ID and Password resolver group.</li>
+
+   <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Canvas uses <abbr title="Single Sign-On">SSO</abbr>.</li> 
+    <li>Instruct user to sign on using CWRU network ID and password.</li>
+    <li>Troubleshoot and resolve or assign to <strong>Identity Management</strong> resolver group as provided applicable script(s).</li>
+    <li>Note troubleshooting steps taken in ticket comments.</li>
   </ol>
 
-<h3 id="slow">Slow Response Time</h3>
+<h3 id="slow">Slow Response Time, Other Performance, Broken Links, etc.</h3>
   <p>back to <a href="#">top</a> </p>
-  <ol>
-    <li>Troubleshoot the user's internet connectivity.</li>
+
+   <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Troubleshoot internet connectivity.</li>
     <li>Instruct the user to clear their cache. Explain how if necessary.</li>
-    <li>Send to Instructure via phone: INSERT PHONE# HERE</li>
+    <li>Note troubleshooting steps taken in ticket comments.</li>
+    <li>Resolve ticket, or <strong>Warm transfer</strong> customer to Instructure: 844-747-4614</li>
   </ol>
 
 <h3 id="not-listed">User is Not Listed in a Class</h3>
   <p>back to <a href="#">top</a> </p>
-  <ol>
+
+   <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Verify registration is complete and final in SIS.</li>
+    <i
     <li>Direct the user to class registration.</li>
     <li>Send to the Canvas resolver group.</li>
   </ol>
