more polish on the canvas

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -47,9 +47,9 @@ UGEN, Canvas, LMS</p>
   <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
   <a href="#not-listed">Not Listed in a class</a></p>
 
-<h3 href="#how-to">How-to + Training</h2>
-
-<h3 href="#outage">Report an Outage</h3>
+<h3><a href="#setup">Activate + Setup + Install</a></h3>
+<h3><a href="#how-to">How-to + Training</a></h3>
+<h3><a href="#outage">Report an Outage</a></h3>
 
 
 <hr>
@@ -64,21 +64,14 @@ UGEN, Canvas, LMS</p>
   <li>Problem or Request description</li>
 </ul>
 
-<h3 id="users">Additional Information</h3>
-
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p> 
-<ul>
-  <li>Brian Yuhnke</li>
-  <li>Heather Bolden</li>
-  <li>Jim Petras</li>
-</ul>
-</p>
+<p><strong>WebEx Support</strong> is available from 9 AM-5 PM, M-F, or as scheduled for event support.</p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
+<p><mark>Canvas</mark> is not considered a critical service. Escalations are not available at this time.</p>
 
 <h2>Troubleshoot + Repair</h2>
 
@@ -110,12 +103,12 @@ UGEN, Canvas, LMS</p>
    <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Verify registration is complete and final in SIS.</li>
-    <i
-    <li>Direct the user to class registration.</li>
-    <li>Send to the Canvas resolver group.</li>
+    <li>If user registration changes were completed within the last 24 hours, advise user to check again the next day. Resolve the ticket.</li>
+    <li>If user registration changes were completed more than 24 hours ago, assign ticket to <strong>Canvas</strong> resolver group.</li>
+    <li>Note troubleshooting steps taken in ticket comments.</li>
   </ol>
 
-<h2>Activate + Setup + Install</h2>
+<h2 id="setup">Activate + Setup + Install</h2>
 <p>Log in to Canvas via Case Network ID and password.</p>
 <p>case.instructure.com</p>
 
