more polish on the canvas

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -40,15 +40,18 @@ UGEN, Canvas, LMS</p>
 
 <h1>Canvas<br>
 <small>End User Support</span></small></h1>
-<p>Per contract, the help desk will provide tier 1 support for Canvas. Issues should originate with the help desk then, if necessary, be warm transferred to Canvas support if the help desk cannot resolve the issue.</p>
+<p>Canvas is a learning management system (LMS) that is currently being tested using a variety of courses across the university. Support for the Canvas application is limited.</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">I Forgot My Password</a><br>
   <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
-  <a href="#not-listed">Not Listed in a class</a></p>
+  <a href="#not-listed">Not Listed in a Class</a></p>
 
-<h3><a href="#setup">Activate + Setup + Install</a></h3>
-<h3><a href="#how-to">How-to + Training</a></h3>
+<h3>How-to + Training</h3>
+  <p><a href="#sign-in">How to Sign-In</a><br>
+  <a href="#help">Online Help + Tutorials</a></p>  
+  
+
 <h3><a href="#outage">Report an Outage</a></h3>
 
 
@@ -67,11 +70,12 @@ UGEN, Canvas, LMS</p>
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p><strong>WebEx Support</strong> is available from 9 AM-5 PM, M-F, or as scheduled for event support.</p>
+<p><strong>Canvas Support</strong> is available from 9 AM-5 PM, M-F. <mark>Canvas</mark> is not considered a critical service. Escalations are not available at this time.</p>
+<p><strong>Instructure</strong> customer service: 844-747-4614 (24/7)</p>
+
 </div>
 
-<h2 id="how-to-escalate">How to Escalate</h2>
-<p><mark>Canvas</mark> is not considered a critical service. Escalations are not available at this time.</p>
+<hr>
 
 <h2>Troubleshoot + Repair</h2>
 
@@ -122,9 +126,9 @@ UGEN, Canvas, LMS</p>
 <h2 id="how-to">How-to + Training</h2>
 <ol>
   <li>Direct the user to the training tutorials Help button in upper-right hand corner.</li>
-  <li>Direct the user to the Canvas guide (login not required) <a>community.canvaslms.com/community/answers/guides/</a>
+  <li>Direct the user to the <a href="community.canvaslms.com/community/answers/guides/">Canvas guide</a> (login not required)</li>
   <li>training re: faculty --> Canvas Resolver Group</li>
-
+</ol>
 
 <h2>Billing</h2>
 <p>Information not available at this time.</p>
