canvas final for review

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -27,10 +27,9 @@ h3 { padding-top: 20px; }
 </style>
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
 </head>
-
 <body>
+
 <div class="container">
 
 <p>Applications | External applications | Canvas</p>
@@ -42,47 +41,43 @@ UGEN, Canvas, LMS</p>
 <small>End User Support</span></small></h1>
 <p>Canvas is a learning management system (LMS) that is currently being tested using a variety of courses across the university. Support for the Canvas application is limited.</p>
 
-<h3>Troubleshoot</h3>
-  <p><a href="#lost-password">I Forgot My Password</a><br>
-  <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
-  <a href="#not-listed">Not Listed in a Class</a></p>
+  <h3>Troubleshoot</h3>
+    <p><a href="#lost-password">I Forgot My Password</a><br>
+    <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
+    <a href="#not-listed">Not Listed in a Class</a></p>
 
-<h3>How-to + Training</h3>
-  <p><a href="#sign-in">How to Sign-In</a><br>
-  <a href="#help">Online Help + Tutorials</a></p>  
+  <h3>How-to + Training</h3>
+    <p><a href="#sign-in">How to Sign-In</a><br>
+    <a href="#help">Online Help + Tutorials</a></p>  
   
-
-<h3><a href="#outage">Report an Outage</a></h3>
-
+  <h3><a href="#other">Other + Cannot Resolve</a></h3>
+  <h3><a href="#outage">Report an Outage</a></h3>
 
 <hr>
 <h2 id="tools-for-resolution">Tools for Resolution</h2>
-<h3 id="required-information">Required Information</h3>
+ 
+  <h3 id="required-information">Required Information</h3>
+  <ul>
+    <li>Name</li>
+    <li>Contact information (preferred and alternate)</li>
+    <li>Case Network ID</li>
+    <li>Location</li>
+    <li>Problem or Request description</li>
+  </ul>
 
-<ul>
-  <li>Name</li>
-  <li>Contact information (preferred and alternate)</li>
-  <li>Case Network ID</li>
-  <li>Location</li>
-  <li>Problem or Request description</li>
-</ul>
+  <h3 id="resolver-groups">Resolver Groups</h3>
 
-<h3 id="resolver-groups">Resolver Groups</h3>
-
-<div class="well well-sm">
-<p><strong>Canvas Support</strong> is available from 9 AM-5 PM, M-F. <mark>Canvas</mark> is not considered a critical service. Escalations are not available at this time.</p>
-<p><strong>Instructure</strong> customer service: 844-747-4614 (24/7)</p>
-
-</div>
+  <div class="well well-sm">
+    <p><strong>Canvas Support</strong> is available from 9 AM-5 PM, M-F. <mark>Canvas</mark> is not considered a critical service. Excepting outages, escalations are not available at this time.</p>
+    <p><strong>Instructure</strong> customer service: 844-747-4614 (24/7)</p>
+  </div>
 
 <hr>
-
 <h2>Troubleshoot + Repair</h2>
 
-<h3 id="lost-password">I Forgot My Password</h3>
+  <h3 id="lost-password">I Forgot My Password</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Canvas uses <abbr title="Single Sign-On">SSO</abbr>.</li> 
     <li>Instruct user to sign on using CWRU network ID and password.</li>
@@ -90,21 +85,19 @@ UGEN, Canvas, LMS</p>
     <li>Note troubleshooting steps taken in ticket comments.</li>
   </ol>
 
-<h3 id="slow">Slow Response Time, Other Performance, Broken Links, etc.</h3>
+  <h3 id="slow">Slow Response Time, Other Performance, Broken Links, etc.</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Troubleshoot internet connectivity.</li>
     <li>Instruct the user to clear their cache. Explain how if necessary.</li>
     <li>Note troubleshooting steps taken in ticket comments.</li>
-    <li>Resolve ticket, or <strong>Warm transfer</strong> customer to Instructure: 844-747-4614</li>
+    <li>Resolve ticket, or <strong>Warm transfer</strong> customer to Instructure: 844-747-4614.</li>
   </ol>
 
-<h3 id="not-listed">User is Not Listed in a Class</h3>
+  <h3 id="not-listed">User is Not Listed in a Class</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Verify registration is complete and final in SIS.</li>
     <li>If user registration changes were completed within the last 24 hours, advise user to check again the next day. Resolve the ticket.</li>
@@ -112,30 +105,59 @@ UGEN, Canvas, LMS</p>
     <li>Note troubleshooting steps taken in ticket comments.</li>
   </ol>
 
-<h2 id="setup">Activate + Setup + Install</h2>
-<p>Log in to Canvas via Case Network ID and password.</p>
-<p>case.instructure.com</p>
-
+<h2>Activate + Setup + Install</h2>
+  <p>This space left blank intentionally</p>
 <h2>Move + Change</h2>
-<p>Unenrolls + Enrolls</p>
-<ul>
-  <li>These changes will not automatically show in the system.</li>
-  <li>Paul Jarc has a job that runs daily to make the changes.</li>
-</ul>
+  <p>This space left blank intentionally</p>
 
-<h2 id="how-to">How-to + Training</h2>
-<ol>
-  <li>Direct the user to the training tutorials Help button in upper-right hand corner.</li>
-  <li>Direct the user to the <a href="community.canvaslms.com/community/answers/guides/">Canvas guide</a> (login not required)</li>
-  <li>training re: faculty --> Canvas Resolver Group</li>
-</ol>
+<h2>How-to + Training</h2>
+
+  <h3 id="sign-in">How to Sign-In</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Canvas uses <abbr title="Single Sign-On">SSO</abbr>.</li> 
+    <li>Instruct user to sign on using CWRU network ID and password.</li>
+    <li>Resolve ticket.</li>
+  </ol>
+
+  <h3 id="help">Online Help + Tutorials</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li><strong>Students</strong> - direct the user to an appropriate resource and resolve the ticket:
+      <ul> 
+        <li>Training tutorials: "Help" button in upper-right hand corner of Canvas application</li>
+        <li><a href="community.canvaslms.com/community/answers/guides/">Canvas guide</a> (login not required)</li>
+      </ul></li>
+    <li><strong>Faculty + Staff</strong> - Provide links to the resources above and assign ticket to the <strong>Canvas</strong> resolver group.</li>
+  </ol>
 
 <h2>Billing</h2>
-<p>Information not available at this time.</p>
+  <p>This space left blank intentionally</p>
+
+<h2 id="other">Other + Cannot Resolve</h2>
+  <p>back to <a href="#">top</a> </p>
+  <p>This service is monitored by the NOC.</p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Any caller with an unresolved application issue should be warm-transferred to Instructure Customer Service @ 844-747-4614.</li>
+    <li>An open ticket requesting an escalation <mark>after</mark> speaking with Instructure should be assigned to the <strong>Canvas</strong> resolver group.</li>
+    <li>Any issue regarding class registration which has been unresolved for greater than 24 hours should be assigned to the <strong>Canvas</strong> resolver group.</li>
+  </ol>
 
 <h2 id="outage">Outage</h2>
-<p>This service is monitored by the NOC.</p>
-<p>Escalate to your group.</p>
+  <p>back to <a href="#">top</a> </p>
+  <p>This service is monitored by the NOC.</p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Troubleshoot user connectivity, hardware as appropriate.</li>
+    <li>Verify that outage is limited to Canvas, and previously unreported.</li>
+    <li>If previously unreported, follow procedures to escalate to <strong>Canvas</strong> resolver group</li>
+    <li>If previously reported, follow procedures to associate with existing problem ticket. Inform customer that issue has been previously reported and that staff are working to restore service. Provide temporary workaround if one has been identified.</li>
+    <li>Note troubleshooting steps taken in ticket comments.</li>
+  </ol>
+
     
 <hr>
 
