final edits per petras

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -42,13 +42,15 @@ UGEN, Canvas, LMS</p>
 <p>Canvas is a learning management system (LMS) that is currently being tested using a variety of courses across the university. Support for the Canvas application is limited.</p>
 
   <h3>Troubleshoot</h3>
-    <p><a href="#lost-password">I Forgot My Password</a><br>
-    <a href="#slow">Slow Response Time, Other Performance, Broken Links, etc.</a><br>
-    <a href="#not-listed">Not Listed in a Class</a></p>
+    <p><a href="#lost-password">I forgot my Password</a><br>
+    <a href="#sign-in">I can't access Canvas</a><br>
+    <a href="#slow">Slow response time, other performance, broken links, etc.</a><br>
+    <a href="#not-listed">Not listed in a class</a></p>
 
   <h3>How-to + Training</h3>
-    <p><a href="#sign-in">How to Sign-In</a><br>
-    <a href="#help">Online Help + Tutorials</a></p>  
+    <p><a href="#sign-in">How to access Canvas</a><br>
+    <a href="#url">What is the Canvas URL?</a><br>
+    <a href="#help">Online help + tutorials</a></p>  
   
   <h3><a href="#other">Other + Cannot Resolve</a></h3>
   <h3><a href="#outage">Report an Outage</a></h3>
@@ -75,7 +77,7 @@ UGEN, Canvas, LMS</p>
 <hr>
 <h2>Troubleshoot + Repair</h2>
 
-  <h3 id="lost-password">I Forgot My Password</h3>
+  <h3 id="lost-password">I forgot my password</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
@@ -85,7 +87,7 @@ UGEN, Canvas, LMS</p>
     <li>Note troubleshooting steps taken in ticket comments.</li>
   </ol>
 
-  <h3 id="slow">Slow Response Time, Other Performance, Broken Links, etc.</h3>
+  <h3 id="slow">Slow response time, other performance, broken links, etc.</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
@@ -95,7 +97,7 @@ UGEN, Canvas, LMS</p>
     <li>Resolve ticket, or <strong>Warm transfer</strong> customer to Instructure: 844-747-4614.</li>
   </ol>
 
-  <h3 id="not-listed">User is Not Listed in a Class</h3>
+  <h3 id="not-listed">User is not listed in a class</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
@@ -112,13 +114,21 @@ UGEN, Canvas, LMS</p>
 
 <h2>How-to + Training</h2>
 
-  <h3 id="sign-in">How to Sign-In</h3>
+  <h3 id="sign-in">How to access canvas</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Canvas uses <abbr title="Single Sign-On">SSO</abbr>.</li> 
-    <li>Instruct user to sign on using CWRU network ID and password.</li>
-    <li>Resolve ticket.</li>
+    <li>Instruct user to sign in using CWRU network ID and password.</li>
+    <li>If user cannot sign in, assign ticket to <strong>Canvas</strong> resolver group. Otherwise, resolve ticket.</li>
+  </ol>
+
+  <h3 id="url">What is the Canvas URL?</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>case.instructure.com</li>
+    <li>Resolve the ticket.</li>
   </ol>
 
   <h3 id="help">Online Help + Tutorials</h3>
