--- a/scripts/webex_fullsupport_draft.html
+++ b/scripts/webex_fullsupport_draft.html
@@ -53,13 +53,16 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 
 <h3>Activate + Setup + Install</h3>
-  <p><a href="#"></a></p>
-
+  <p><a href="#install-application">Application</a><br>
+  <a href="#install-browser-extension">Browser Extension</a><br>
+  <a href="#browser-support">Supported Browsers</a></p>
 
 <h3>How-to + Training</h3>
   <p><a href="#webex-url">WebEx URL</a><br>
-  <a href="#connect-audio">Connect meeting audio</a>
+  <a href="#connect-audio">Connect meeting audio</a><br>
+  <a href="#help">More help + Documentation</a></p>
 
+<h3><a href="#billing">Billing</h3>
 <h3><a href="#unable-to-resolve">Other + Unable to Resolve</h3>
 <h3><a href="#outage">Report an Outage</a></h3>
 
@@ -79,29 +82,20 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p><strong>WebEx Support</strong> is available from 9 AM-5 PM, M-F, or as scheduled for event support.</p>
+<p><strong>WebEx</strong> resolver group is available from 9 AM-5 PM, M-F, or as scheduled for event support.</p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
-<p><mark>WebEx</mark> is not considered a critical service. However, this service is offered to VIP, Platinum and Standard SLA customers. Take care to ensure that all incidents reported by VIP or Platinum customers receive appropriate treatment.</p>
-<p>Escalations are available whenever requested, including during planned university closures and recognized holidays. During unplanned university closures escalations may NOT be available.</p>
+<p><mark>WebEx</mark> is not considered a critical service. However, take care to properly identify the user so that all incidents reported by VIP or Platinum customers are appropriately prioritized.</p>
+<p>Escalations may not be available during planned university closures or recognized holidays.</p>
 
 <h3>Who to Call <a href="http://punnitimages.s3-website-us-east-1.amazonaws.com/KVe.gif"><span style="color:white">HERE</span></a></h3>
 <div class="well well-sm">
 <ol>
-  <li><p><strong>Jeremy Cole</strong><br>
-    Office: (216) 368-0072<br> 
-    Cell: (440) 477-2232 <mark>after hours only</mark><br>
-    Google Voice: (440) 296-9250</p></li>
-  <li><p><strong>Stan Kusper</strong><br>
-    Office: (216) 368-6484<br>
-    Cell: (216) 470-9962 <mark>after hours only</mark></p></li>
-  <li><p><strong>Dave Uhrin</strong><br>
-    Office: (216) 368-5674<br> 
-    Cell: (216) 212-9207</p></li>
-  <li><p><strong>Paul Kalanish</strong><br> 
-    Office: (216) 368-5911<br>
-    Cell: (216) 338-1986</p></li>
+  <li><p><strong>TBD</strong><br>
+    Office: (216) 368-2000<br> 
+    Cell: (440) 555-1234<br>
+    Email: abc123@case.edu</p></li>
 </ol>
 </div>
 
@@ -212,7 +206,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
 
-    <h3 id="no-audio">Participants cannot hear one another</h3>
+  <h3 id="no-audio">Participants cannot hear one another</h3>
   <p>back to <a href="#">top</a> </p>
 
    <ol>
@@ -223,55 +217,36 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Resolve ticket.</li>
   </ol>
 
-<h2>Billing</h2>
-<p>This space left blank intentionally</p>
+<h2 id="billing">Billing</h2>
+<p>back to <a href="#">top</a> </p>
+<p>All billing issues should be assigned to the <strong>Telephone Services</strong> resolver group.</p>
 
 
 <h2>Unable to Resolve</h2>
 <p>back to <a href="#">top</a> </p>
-
-  <p>Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
-  <p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
   <ol>
     <li>Verify user identity.</li>
     <li>Gather resolution information and enter it into the ticket.</li>
     <li>Note any troubleshooting steps taken.</li>
     <li>Describe the problem.</li>
-    <li>Assign ticket to <strong>DSS</strong> resolver group.</li>
+    <li>Assign ticket to <strong>Webex</strong> resolver group.</li>
   </ol>
 
 <h2>Outage</h2>
 <p>back to <a href="#">top</a> </p>
+<p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
-<ol>  
-  <li>Verify user identity.</li>
-  <li>Gather resolution information and enter it into the ticket.</li>
-  <li>Attempt to access webmail.
-    <p>
-      <div class="well">
-        <ol>
-          <li>Open <a href="apps.rackspace.com">apps.rackspace.com</a> in an internet browser.</li>
-          <li>Type email address and password.</li>
-          <li>Sign in for access to webmail and calendar.</li>
-        </ol>
-      </div></p></li>
-  <li>If after hours, escalate through per the following sequence:
-    <p>
-      <div class="well well-sm">
-        <ol>
-          <li><p><strong>Jeremy Cole</strong><br> 
-          Cell: (440) 477-2232<br>
-          Google Voice: (440) 296-9250</p></li>
-          <li><p><strong>Stan Kusper</strong><br>
-          Cell: (216) 470-9962</p></li>
-          <li><p><strong>Dave Uhrin</strong><br>
-          Cell: (216) 212-9207</p></li>
-          <li><p><strong>Paul Kalanish</strong><br> 
-          Cell: (216) 338-1986</p></li>
-      </ol></div></p></li>
-  <li>If business hours, escalate using <a href="#how-te-escalate">normal daytime contacts.</a></li>
-    
+  <ol>  
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Troubleshoot user connectivity, hardware as appropriate.</li>
+    <li>Verify that outage is limited to Webex, and previously unreported.</li>
+    <li>If previously unreported, follow procedures to escalate.</li>
+    <li>If previously reported, follow procedures to associate with existing problem ticket. Inform customer that issue has been previously reported and that staff are working to restore service. Provide temporary workaround if one has been identified.</li>
+    <li>Note troubleshooting steps taken in ticket comments.</li>
+  </ol>
+
 <hr>
 
 <div class="pull-right">
