--- a/scripts/webex_fullsupport_draft.html
+++ b/scripts/webex_fullsupport_draft.html
@@ -178,14 +178,24 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 <h2>Activate + Setup + Install</h2>
 
-  <h3 id="no-audio">Participants cannot hear one another</h3>
+  <h3 id="install-application">Application</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Make sure that audio connections are not muted.</li>
-    <li><mark>Host</mark> - have participants check their phone or VoIP connections and confirm that microphones or headsets are powered and switched on.</li>
-    <li>Try to reset a VoIP connection by clicking Mute then Unmute.</li>
+    <li>Resolve ticket.</li>
+  </ol>
+
+  <h3 id="install-browser-extension">Browser Extension</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Resolve ticket.</li>
+  </ol>
+
+  <h3 id="browser-support">Supported Browsers</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
     <li>Resolve ticket.</li>
   </ol>
   
@@ -195,25 +205,24 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 
 <h2>How-to + Training</h2>
 
-  <h3 id="no-audio">Participants cannot hear one another</h3>
+  <h3 id="webex-url">WebEx URL</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Make sure that audio connections are not muted.</li>
-    <li><mark>Host</mark> - have participants check their phone or VoIP connections and confirm that microphones or headsets are powered and switched on.</li>
-    <li>Try to reset a VoIP connection by clicking Mute then Unmute.</li>
     <li>Resolve ticket.</li>
   </ol>
 
-  <h3 id="no-audio">Participants cannot hear one another</h3>
+  <h3 id="connect-audio">Connect meeting audio</h3>
   <p>back to <a href="#">top</a> </p>
-
-   <ol>
+  <ol>
     <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Make sure that audio connections are not muted.</li>
-    <li><mark>Host</mark> - have participants check their phone or VoIP connections and confirm that microphones or headsets are powered and switched on.</li>
-    <li>Try to reset a VoIP connection by clicking Mute then Unmute.</li>
+    <li>Resolve ticket.</li>
+  </ol>
+
+  <h3 id="help">More help + Documentation</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Gather resolution information and enter it into the ticket.</li>
     <li>Resolve ticket.</li>
   </ol>
 
@@ -221,8 +230,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
 <p>back to <a href="#">top</a> </p>
 <p>All billing issues should be assigned to the <strong>Telephone Services</strong> resolver group.</p>
 
-
-<h2>Unable to Resolve</h2>
+<h2 id="unable-to-resolve">Unable to Resolve</h2>
 <p>back to <a href="#">top</a> </p>
 
   <ol>
@@ -233,7 +241,7 @@ WebEx; Online meetings; Technical issues; Cisco</p>
     <li>Assign ticket to <strong>Webex</strong> resolver group.</li>
   </ol>
 
-<h2>Outage</h2>
+<h2 id="outage">Outage</h2>
 <p>back to <a href="#">top</a> </p>
 <p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
